# CMakeTemplate

./: .gitignore  CMakeLists.txt
include/example/: example.hpp
src/: CMakeLists.txt  main.cpp
src/example/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt  example_test.cpp
